# env_soc_cog_space

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/: Autotroph.h  AutotrophByRates.h  Cohort.h  Constants.h  LivingBeing.h  Niche.h
src/: Autotroph.cpp  AutotrophByRates.cpp  Cohort.cpp  LivingBeing.cpp  Niche.cpp  main.cpp
